#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2026-02-16 Sun> *2.5.3*

Autocomplete for inline =@= commands in chat prompt.

*** New Features

- *=@= Autocomplete* -- Typing =@= in the prompt area triggers =completing-read= with available inline commands (=search=, =rag=, =file=). Inserts the chosen syntax template (e.g., =@search()=) with cursor positioned inside the parentheses. Commands are filtered based on loaded modules. Outside the prompt area, =@= inserts literally. Press =C-g= to cancel and insert a literal =@=.
- *=ollama-buddy-at-commands=* -- New customizable alist for defining available =@= commands and their templates, making it easy to add new inline commands.
- *Inline =@file(path)= Syntax* -- Use =@file(/path/to/file)= in prompts to attach files to the conversation context inline. Paths are expanded and the file content is attached on send. Skips already-attached and non-existent files with a message. Works well with =dired-copy-filename-as-kill= for pasting paths.

** <2026-02-16 Sun> *2.5.2*

PDF support for RAG indexing.

*** New Features

- *PDF Indexing* -- RAG can now index PDF files using =pdftotext= (from =poppler-utils=). PDF text extraction is auto-detected at runtime; if =pdftotext= is not installed, PDF files are silently skipped during indexing. PDFs bypass the file size limit since binary size does not reflect extracted text size.

** <2026-02-16 Sun> *2.5.1*

Usability improvements and inline RAG syntax.

*** New Features
